Bug 496330 - Discover allows to configure permissions for Flatpak runtimes, which doesn't work/doesn't make sense
Summary: Discover allows to configure permissions for Flatpak runtimes, which doesn't ...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-11-16 01:06 UTC by Nicolas Fella
Modified: 2024-11-30 12:30 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-11-16 01:06:52 UTC
STEPS TO REPRODUCE
1. Open Discover 
2. Go to Installed
3. Click on "KDE Application Platform"
4. Scroll Down

OBSERVED RESULT
A button "Configure Permissions". Clicking on it opens the Flatpak KCM, but with nothing selected

EXPECTED RESULT
Either the button should do something useful, or it shouldn't exist

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-11-19 21:27:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/973
Comment 2 Nate Graham 2024-11-25 00:41:43 UTC
Git commit c7738e4871bee320c03a95dc8452a4263ea1053e by Nate Graham.
Committed on 25/11/2024 at 00:41.
Pushed by ngraham into branch 'master'.

Hide irrelevant stuff for Flatpak runtimes

It doesn't make sense to be able to write reviews for Flatpak runtimes,
try to load screenshots, allow configuring permissions, and things like
that. Let's hide this stuff.
Related: bug 496329
FIXED-IN: 6.2.4

M  +12   -8    discover/qml/ApplicationPage.qml
M  +5    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp
M  +1    -0    libdiscover/resources/AbstractResource.h

https://invent.kde.org/plasma/discover/-/commit/c7738e4871bee320c03a95dc8452a4263ea1053e
Comment 3 Nate Graham 2024-11-25 00:49:24 UTC
Git commit f8681aa9128607887ae6e5ae2e404efe0d7e6815 by Nate Graham.
Committed on 25/11/2024 at 00:48.
Pushed by ngraham into branch 'Plasma/6.2'.

Hide irrelevant stuff for Flatpak runtimes

It doesn't make sense to be able to write reviews for Flatpak runtimes,
try to load screenshots, allow configuring permissions, and things like
that. Let's hide this stuff.
Related: bug 496329
FIXED-IN: 6.2.4
(cherry picked from commit c7738e4871bee320c03a95dc8452a4263ea1053e)

M  +12   -8    discover/qml/ApplicationPage.qml
M  +5    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp
M  +1    -0    libdiscover/resources/AbstractResource.h

https://invent.kde.org/plasma/discover/-/commit/f8681aa9128607887ae6e5ae2e404efe0d7e6815