Hide irrelevant stuff for Flatpak runtimes

It doesn't make sense to be able to write reviews for Flatpak runtimes,
try to load screenshots, allow configuring permissions, and things like
that. Let's hide this stuff.

BUG: 496330
BUG: 496329
FIXED-IN: 6.2.4